--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "him-ui": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "sass": "^1.56.1",
     "uuid": "^9.0.0",
